<resources>
    <string name="app_name">Phish App</string>
    <string name="subtitle">TCSS 450 Labs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fullpost">Full Post</string>
    <string name="action_logout">Logout</string>
</resources>
